Added additional translations, updated the button html output, and added an enabled site setting

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,4 +1,7 @@
 plugins:
+  composerhelp_enabled:
+    default: false
+    client: true
   composerhelp_modal_url:
     default: ''
     client: true
